          from 0.08191 - documentation was in fact incorrect, not the code
        - Fix Sybase ASE IC::DateTime support (::Storage going out of sync
          with new default format expected by DateTime::Format::Sybase)
        - Fix a bug in update_all() resulting in the first row receiving a
          different dataset than the subsequent ones

0.08192 2011-05-10 04:20 (UTC)
    * Fixes
        - Fix serious regression on SQLite, corrupting data when an alphanum
          value does not correspond to a stale numeric datatype in colinfo

0.08191 2011-05-02 00:45 (UTC) (deleted from CPAN)
    * New Features / Changes
        - Add quote_names connection option. When set to true automatically
          sets quote_char and name_sep appropriate for your RDBMS
        - Add retrieve_on_insert column info flag, allowing to retrieve any
          column value instead of just autoinc primary keys
        - Bring back strict ordering of selectors in complex search chains
          (an ill-fated attempt was made in 0.08127 to order intelligently)
        - All limit dialects (except for the older Top and FetchFirst) are
          now using bind parameters for the limits/offsets, making DBI's
          prepare_cached useful across paged resutsets
        - Support for savepoints for SQLite
        - Support for MS Access databases via DBD::ODBC and DBD::ADO (only
          Win32 support currently tested)
        - Support for the Firebird RDBMS over the new DBD::Firebird driver
        - IC::DateTime support for MSSQL over DBD::ADO
        - Both the ::ODBC and ::ADO dispatchers now warn if a rdbms-specific
          driver is not found for this connection before falling back to
          plain ::Storage::DBI
        - ::Storage::DBI::sth was mistakenly marked/documented as public,
          privatize and warn on deprecated use
        - Massive overhaul of bind values/attributes handling - slightly
          changes the output of as_query (should not cause compat issues)