@@ -5,7 +5,7 @@ use lib qw(t/lib);
 use DBICTest;
 use DBIC::SqlMakerTest;
 
-use DBIx::Class::SQLMaker::ACCESS;
+use DBIx::Class::SQLMaker::ACCESS ();
 
 my $sa = DBIx::Class::SQLMaker::ACCESS->new;
 
@@ -36,7 +36,7 @@ is_same_sql_bind(
             { "track.cd" => "me.cdid" },
         ],
         [
-            { "-join_type" => "LEFT", artist => "artist" },
+            { artist => "artist" },
             { "artist.artistid" => "me.artist" },
         ],
     ],
@@ -46,8 +46,8 @@ is_same_sql_bind(
 );
 is_same_sql_bind(
   $sql, \@bind,
-  'SELECT track.title, cd.cdid, cd.artist, cd.title, cd.year, artist.artistid, artist.name FROM ((cd me LEFT JOIN track track ON track.cd = me.cdid) LEFT JOIN artist artist ON artist.artistid = me.artist)', [],
-  'two-step join parenthesized'
+  'SELECT track.title, cd.cdid, cd.artist, cd.title, cd.year, artist.artistid, artist.name FROM ((cd me LEFT JOIN track track ON track.cd = me.cdid) INNER JOIN artist artist ON artist.artistid = me.artist)', [],
+  'two-step join parenthesized and inner join prepended with INNER'
 );
 
 done_testing;
